--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
-    "next": "15.2.2",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
